--- a/task2/index.html
+++ b/task2/index.html
@@ -12,7 +12,7 @@
             <li><a href="#">Part 1</a></li>
             <li><a href="#">Part 2</a></li>
             <li><a href="#">Part 3 is longer</a></li>
-            <li><a href="#">Part 4</a></li>
+            <li class="right"><a href="#">Part 4</a></li>
         </ul>
     </nav>
 </body>
